--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,22 @@
         continue.</strong
       >
     </noscript>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: "en" },
+          "google_translate_element"
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
   </body>
 </html>
